janet-check/src/analysis/stdlib/snapshots/janet_check__analysis__stdlib__tests__reads_the_dump_against_a_checkout.snap
---
source: src/analysis/stdlib/tests.rs
expression: show_bindings(Some(&checkout()))
---
----- DUMP
{"name":"map","kind":"function","doc":"(map f ind & inds)\n\nMap.","sm":["boot.janet",1098,1]}
{"name":"os/clock","kind":"cfunction","doc":null,"sm":["src/core/os.c",1743,3]}
{"name":"put","kind":"cfunction","doc":"(put ds key value)","sm":null}
{"name":"missing","kind":"macro","doc":"Not a signature.","sm":["src/core/nope.c",1,1]}
{"name":"pi","kind":"value","doc":null,"sm":null}

----- BINDINGS
map: Function (map f ind & inds) at src/boot/boot.janet:1097:0
os/clock: Cfunction at src/core/os.c:1742:2
put: Cfunction (put ds key value) at src/core/corelib.c:1:33
missing: Macro
pi: Value
if: Special (if condition when-true &opt when-false)
